Fix bugs and apply code suggestions